--- a/sound-engine/Cargo.toml
+++ b/sound-engine/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 simple-error = "0.2.3"
+alsa = "0.5.0"
 pulse = { package = "libpulse-binding", version = "2.25.0" }
 psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
+zmq = "0.9"
