--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 sound-engine = { path = "./sound-engine" }
+node-engine = { path = "./node-engine" }
+ipc = { path = "./ipc" }
 
 [workspace]
 
