--- a/node-engine/Cargo.toml
+++ b/node-engine/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 sound-engine = { path = "../sound-engine" }
+serde = { version = "1.0.133", features = ["derive"] }
+serde_json = "1.0.74"
+lazy_static = "1.4.0"
