--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "concurrently": "^7.0.0",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
+    "rete": "^1.4.5",
+    "rete-connection-plugin": "^0.9.0",
+    "rete-vue-render-plugin": "^1.0.0-rc2",
     "rollup-plugin-svelte": "^7.1.0",
     "zeromq": "^5.2.8"
   },
