--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
-    "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\"",
+    "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\" \"npm:svelte-ts-watch\"",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -13,7 +13,8 @@
     "svelte-build": "rollup -c",
     "svelte-dev": "rollup -c -w",
     "svelte-start": "sirv public",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "svelte-ts-check": "svelte-check --tsconfig ./tsconfig.json",
+    "svelte-ts-watch": "svelte-check --watch --tsconfig ./tsconfig.json"
   },
   "keywords": [],
   "author": {
@@ -66,6 +67,9 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@tsconfig/svelte": "^2.0.0",
+    "@types/rollup-plugin-css-only": "^3.1.0",
     "electron": "16.0.6",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -75,9 +79,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "typescript": "^4.0.0",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^2.0.0"
+    "typescript": "^4.0.0"
   }
 }
