--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*", "src/index.js", "src/main/*"]
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*", "src/index.js", "src/main/*"],
+  "compilerOptions": {
+    "rootDir": "src"
+  }
 }
