--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
-    "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\" \"npm:svelte-ts-watch\"",
+    "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\"",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -53,6 +53,7 @@
     "concurrently": "^7.0.0",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
+    "esm": "^3.2.25",
     "rete": "^1.4.5",
     "rete-connection-plugin": "^0.9.0",
     "rete-vue-render-plugin": "^1.0.0-rc2",
