--- a/vpo-frontend/tsconfig-main.json
+++ b/vpo-frontend/tsconfig-main.json
@@ -11,7 +11,7 @@
       "esModuleInterop": true
     },
     "include": [
-        "src/main.ts",
+        "src/index.ts",
         "src/main/**/*.ts"
     ]
 }
