--- a/vpo-backend/ipc/Cargo.toml
+++ b/vpo-backend/ipc/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 futures = "0.3"
+async-std = "1.10.0"
+bitflags = "1.3.2"
+thiserror = "1.0.30"
