--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -10,3 +10,4 @@ sound-engine = { path = "../sound-engine" }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 lazy_static = "1.4.0"
+thiserror = "1.0.30"
