--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -55,6 +55,7 @@
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
     "esm": "^3.2.25",
+    "panzoom": "^9.4.2",
     "rollup-plugin-svelte": "^7.1.0",
     "sirv-cli": "^2.0.2"
   },
