--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -10,4 +10,5 @@ simple-error = "0.2.3"
 alsa = "0.5.0"
 pulse = { package = "libpulse-binding", version = "2.25.0" }
 psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
-
+lazy_static = "1.4.0"
+snafu = "0.7.0"
