--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 lazy_static = "1.4.0"
 thiserror = "1.0.30"
+petgraph = "0.6.0"
