--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -12,6 +12,8 @@ ipc = { path = "./ipc" }
 async-std = "1.10.0"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
+routerify = "3.0.0"
+hyper = "0.14.18"
 
 [workspace]
 
