--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -70,6 +70,7 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
     "@types/rollup-plugin-css-only": "^3.1.0",
+    "@zerodevx/svelte-toast": "^0.7.1",
     "electron": "16.0.6",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
