--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -14,6 +14,8 @@ serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 routerify = "3.0.0"
 hyper = "0.14.18"
+strum = "0.24.0"
+strum_macros = "0.24"
 
 [workspace]
 
