--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -55,9 +55,11 @@
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
     "esm": "^3.2.25",
+    "fast-equals": "^4.0.1",
     "i18next": "^21.6.16",
     "panzoom": "^9.4.2",
     "rollup-plugin-svelte": "^7.1.0",
+    "rxjs": "^6.6.7",
     "sirv-cli": "^2.0.2",
     "svelte-i18next": "^1.2.2"
   },
