Start switching over to safety-match for enums

--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -60,6 +60,7 @@
     "panzoom": "^9.4.2",
     "rollup-plugin-svelte": "^7.1.0",
     "rxjs": "^6.6.7",
+    "safety-match": "^0.4.4",
     "sirv-cli": "^2.0.2",
     "svelte-i18next": "^1.2.2"
   },
