--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -14,4 +14,4 @@ thiserror = "1.0.30"
 petgraph = "0.6.0"
 strum = "0.24.0"
 strum_macros = "0.24"
-rhai = "1.7.0"
+rhai = { version = "1.7.0", features = ["f32_float", "only_i32"] }
