--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -15,3 +15,4 @@ petgraph = "0.6.0"
 strum = "0.24.0"
 strum_macros = "0.24"
 rhai = { version = "1.7.0", features = ["f32_float", "only_i32"] }
+enum_dispatch = "0.3.8"
