--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -16,3 +16,4 @@ strum = "0.24.0"
 strum_macros = "0.24"
 rhai = { version = "1.7.0", features = ["f32_float", "only_i32"] }
 enum_dispatch = "0.3.8"
+smallvec = "1.9.0"
