--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -17,3 +17,4 @@ strum_macros = "0.24"
 rhai = { version = "1.7.0", features = ["f32_float", "only_i32"] }
 enum_dispatch = "0.3.8"
 smallvec = "1.9.0"
+async-std = "1.10.0"
