--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -78,6 +78,7 @@
     "@types/rollup-plugin-css-only": "^3.1.0",
     "@zerodevx/svelte-toast": "^0.7.1",
     "electron": "16.0.6",
+    "electron-packager": "^16.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
