--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2021"
 
 [dependencies]
 simple-error = "0.2.3"
-alsa = "0.5.0"
-pulse = { package = "libpulse-binding", version = "2.25.0" }
-psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
 lazy_static = "1.4.0"
 snafu = "0.7.0"
 serde = { version = "1.0.133", features = ["derive"] }
+cpal = "0.14.0"
+ringbuf = "0.2.8"
+
+[target.'cfg(unix)'.dependencies]
+alsa = { version = "0.5.0" }
+pulse = { package = "libpulse-binding", version = "2.25.0" }
+psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
