--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -12,6 +12,8 @@ snafu = "0.7.0"
 serde = { version = "1.0.133", features = ["derive"] }
 cpal = "0.14.0"
 ringbuf = "0.2.8"
+rodio = "0.16.0"
+serde_json = "1.0.74"
 
 [target.'cfg(unix)'.dependencies]
 alsa = { version = "0.6.0" }
