More snafu stuff

--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -1,22 +1,23 @@
 [package]
+edition = "2021"
 name = "vpo-backend"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sound-engine = { path = "./sound-engine" }
-node-engine = { path = "./node-engine" }
-ipc = { path = "./ipc" }
 async-std = "1.10.0"
-serde = { version = "1.0.133", features = ["derive"] }
-serde_json = "1.0.74"
-routerify = "3.0.0"
 hyper = "0.14.18"
+ipc = {path = "./ipc"}
+node-engine = {path = "./node-engine"}
+rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
+routerify = "3.0.0"
+serde = {version = "1.0.133", features = ["derive"]}
+serde_json = "1.0.74"
+snafu = "0.7"
+sound-engine = {path = "./sound-engine"}
 strum = "0.24.0"
 strum_macros = "0.24"
-rhai = { version = "1.7.0", features = ["f32_float", "only_i32"] }
 
 [profile.release-x86_64-pc-windows-gnu]
 inherits = "release"
@@ -27,15 +28,14 @@ inherits = "release"
 opt-level = 3
 
 [profile.debug-release]
+debug = 2
 inherits = "dev"
 opt-level = 3
-debug = 2
-
 
 [workspace]
 
 members = [
-    "sound-engine",
-    "node-engine",
-    "ipc"
+  "sound-engine",
+  "node-engine",
+  "ipc",
 ]
