--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -14,6 +14,7 @@ rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
 smallvec = "1.9.0"
+smartstring = "1.0"
 snafu = "0.7"
 sound-engine = {path = "../sound-engine"}
 strum = "0.24.0"
