--- a/vpo-backend/asset-manager/Cargo.toml
+++ b/vpo-backend/asset-manager/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "asset_manager"
-version = "0.1.0"
 edition = "2021"
+name = "asset-manager"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+snafu = "0.7"
