--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+asset-manager = {path = "../asset-manager"}
 async-std = "1.10.0"
 enum_dispatch = "0.3.8"
 lazy_static = "1.4.0"
