--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+asset-manager = {path = "../asset-manager"}
 cpal = "0.14.0"
 lazy_static = "1.4.0"
 ringbuf = "0.2.8"
