--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -6,11 +6,11 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-asset-manager = {path = "./asset-manager"}
 async-std = "1.10.0"
 hyper = "0.14.18"
 ipc = {path = "./ipc"}
 node-engine = {path = "./node-engine"}
+resource-manager = {path = "./resource-manager"}
 rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
 routerify = "3.0.0"
 serde = {version = "1.0.133", features = ["derive"]}
@@ -39,5 +39,5 @@ members = [
   "sound-engine",
   "node-engine",
   "ipc",
-  "asset-manager",
+  "resource-manager",
 ]
