--- a/vpo-backend/resource-manager/Cargo.toml
+++ b/vpo-backend/resource-manager/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "asset-manager"
+name = "resource-manager"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
