--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -6,9 +6,9 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-asset-manager = {path = "../asset-manager"}
 cpal = "0.14.0"
 lazy_static = "1.4.0"
+resource-manager = {path = "../resource-manager"}
 ringbuf = "0.2.8"
 rodio = "0.16.0"
 serde = {version = "1.0.133", features = ["derive"]}
