--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -10,6 +10,7 @@ async-std = "1.10.0"
 hyper = "0.14.18"
 ipc = {path = "./ipc"}
 node-engine = {path = "./node-engine"}
+resource-manager = {path = "./resource-manager"}
 rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
 routerify = "3.0.0"
 serde = {version = "1.0.133", features = ["derive"]}
@@ -18,6 +19,7 @@ snafu = "0.7"
 sound-engine = {path = "./sound-engine"}
 strum = "0.24.0"
 strum_macros = "0.24"
+walkdir = "2"
 
 [profile.release-x86_64-pc-windows-gnu]
 inherits = "release"
@@ -33,9 +35,9 @@ inherits = "dev"
 opt-level = 3
 
 [workspace]
-
 members = [
   "sound-engine",
   "node-engine",
   "ipc",
+  "resource-manager",
 ]
