--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
+edition = "2021"
 name = "sound-engine"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-simple-error = "0.2.3"
-lazy_static = "1.4.0"
-snafu = "0.7.0"
-serde = { version = "1.0.133", features = ["derive"] }
 cpal = "0.14.0"
+lazy_static = "1.4.0"
+resource-manager = {path = "../resource-manager"}
 ringbuf = "0.2.8"
 rodio = "0.16.0"
+serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
+simple-error = "0.2.3"
+snafu = "0.7.0"
 
 [target.'cfg(unix)'.dependencies]
-alsa = { version = "0.6.0" }
-pulse = { package = "libpulse-binding", version = "2.25.0" }
-psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
+alsa = {version = "0.6.0"}
+psimple = {package = "libpulse-simple-binding", version = "2.24.1"}
+pulse = {package = "libpulse-binding", version = "2.25.0"}
