--- a/vpo-backend/resource-manager/Cargo.toml
+++ b/vpo-backend/resource-manager/Cargo.toml
@@ -6,4 +6,6 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde_json = "1.0"
 snafu = "0.7"
+threadpool = "1.8.1"
