--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -87,6 +87,7 @@
     "sirv": "^2.0.2",
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
+    "svelte-feather-icons": "^4.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
