--- a/vpo-backend/resource-manager/Cargo.toml
+++ b/vpo-backend/resource-manager/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0"
 snafu = "0.7"
 threadpool = "1.8.1"
