--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -7,7 +7,10 @@ version = "0.1.0"
 
 [dependencies]
 cpal = "0.14.0"
+interp = "0.1.1"
 lazy_static = "1.4.0"
+nalgebra = "0.31"
+num = "0.4.0"
 resource-manager = {path = "../resource-manager"}
 ringbuf = "0.2.8"
 rodio = "0.16.0"
