--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -15,6 +15,7 @@ rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
 routerify = "3.0.0"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
+smallvec = {version = "1.10", features = ["serde"]}
 snafu = "0.7"
 sound-engine = {path = "./sound-engine"}
 strum = "0.24.0"
