--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -12,6 +12,7 @@ lazy_static = "1.4.0"
 petgraph = "0.6.0"
 resource-manager = {path = "../resource-manager"}
 rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
+semver = "1.0.14"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
 smallvec = {version = "1.9", features = ["serde"]}
