--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -21,6 +21,7 @@ serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
 simple-error = "0.2.3"
 snafu = "0.7.0"
+toml = "0.5"
 
 [target.'cfg(unix)'.dependencies]
 alsa = {version = "0.6.0"}
