--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 async-std = "1.10.0"
 ddgg = {git = "https://github.com/smj-edison/ddgg", features = ["js_names", "serde"]}
 enum_dispatch = "0.3.8"
+itertools = "0.10.5"
 lazy_static = "1.4.0"
 petgraph = "0.6.0"
 resource-manager = {path = "../resource-manager"}
