--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -7,9 +7,10 @@ version = "0.1.0"
 
 [dependencies]
 async-std = "1.10.0"
+ddgg = {git = "https://github.com/smj-edison/ddgg", features = ["js_names", "serde"]}
 enum_dispatch = "0.3.8"
+itertools = "0.10.5"
 lazy_static = "1.4.0"
-midir = "0.8"
 petgraph = "0.6.0"
 resource-manager = {path = "../resource-manager"}
 rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
@@ -22,5 +23,3 @@ snafu = "0.7"
 sound-engine = {path = "../sound-engine"}
 strum = "0.24.0"
 strum_macros = "0.24"
-thiserror = "1.0.30"
-twox-hash = "1.6.3"
