--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arr_macro = "0.2.1"
 async-std = "1.10.0"
 ddgg = {git = "https://github.com/smj-edison/ddgg", features = ["js_names", "serde"]}
 enum_dispatch = "0.3.8"
