--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -12,9 +12,10 @@ ipc = {path = "./ipc"}
 lazy_static = "1.4.0"
 midir = "0.8"
 node-engine = {path = "./node-engine"}
+once_cell = "1.17.1"
 regex = "1.7"
 resource-manager = {path = "./resource-manager"}
-rhai = {version = "1.7.0", features = ["f32_float", "only_i32", "wasm-bindgen"]}
+rhai = {version = "1.7.0", features = ["f32_float", "only_i32", "wasm-bindgen", "sync"]}
 semver = "1.0.14"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
@@ -26,6 +27,10 @@ walkdir = "2"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+[target.'cfg(target_arch="wasm32")'.dependencies]
+js-sys = "0.3.61"
+wasm-bindgen = "0.2.63"
 
 [target.'cfg(unix)'.dependencies]
 alsa = {version = "0.6.0"}
