--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -60,6 +60,7 @@
     "i18next": "^21.6.16",
     "panzoom": "^9.4.2",
     "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-web-worker-loader": "^1.6.1",
     "rxjs": "^6.6.7",
     "safety-match": "^0.4.4",
     "sirv-cli": "^2.0.2",
