--- a/vpo-frontend-new/package.json
+++ b/vpo-frontend-new/package.json
@@ -11,6 +11,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@nubolab-ffwd/svelte-fluent": "^0.6.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
@@ -20,5 +21,14 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@zerodevx/svelte-toast": "^0.9.3",
+		"fast-equals": "^5.0.1",
+		"i18next": "^22.4.14",
+		"jsdom": "^21.1.1",
+		"panzoom": "^9.4.3",
+		"rxjs": "^7.8.0",
+		"svelte-i18next": "^1.2.2"
+	}
 }
