--- a/vpo-frontend-new/package.json
+++ b/vpo-frontend-new/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-feather-icons": "^4.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
