--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -15,7 +15,7 @@ node-engine = {path = "./node-engine"}
 once_cell = "1.17.1"
 regex = "1.7"
 resource-manager = {path = "./resource-manager"}
-rhai = {version = "1.7.0", features = ["f32_float", "only_i32", "wasm-bindgen", "sync"]}
+rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std"]}
 semver = "1.0.14"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
@@ -30,6 +30,7 @@ crate-type = ["cdylib", "lib"]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 js-sys = "0.3.61"
+parking_lot_core = "=0.8.0"
 wasm-bindgen = "0.2.63"
 
 [target.'cfg(unix)'.dependencies]
