--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -7,14 +7,14 @@ version = "0.1.0"
 
 [dependencies]
 arr_macro = "0.2.1"
-async-std = "1.10.0"
+
 ddgg = {git = "https://github.com/smj-edison/ddgg", features = ["js_names", "serde"]}
 enum_dispatch = "0.3.8"
 itertools = "0.10.5"
 lazy_static = "1.4.0"
 petgraph = "0.6.0"
 resource-manager = {path = "../resource-manager"}
-rhai = {version = "1.7.0", features = ["f32_float", "only_i32"]}
+rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std"]}
 semver = "1.0.14"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
@@ -22,5 +22,3 @@ smallvec = {version = "1.9", features = ["serde"]}
 smartstring = "1.0"
 snafu = "0.7"
 sound-engine = {path = "../sound-engine"}
-strum = "0.24.0"
-strum_macros = "0.24"
