--- a/vpo-backend/ipc/Cargo.toml
+++ b/vpo-backend/ipc/Cargo.toml
@@ -6,9 +6,11 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "1.10.0"
 bitflags = "1.3.2"
-futures = "0.3"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
+
+[target.'cfg(any(unix,windows))'.dependencies]
+async-std = "1.10.0"
+futures = "0.3"
 thiserror = "1.0.30"
