--- a/vpo-backend/resource-manager/Cargo.toml
+++ b/vpo-backend/resource-manager/Cargo.toml
@@ -10,5 +10,7 @@ ddgg = {git = "https://github.com/smj-edison/ddgg", features = ["js_names", "ser
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0"
 snafu = "0.7"
-threadpool = "1.8.1"
 toml = "0.5"
+
+[target.'cfg(any(unix,windows))'.dependencies]
+threadpool = "1.8.1"
