--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -29,8 +29,8 @@ crate-type = ["cdylib", "lib"]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 js-sys = "0.3.61"
-parking_lot_core = "=0.8.0"
 wasm-bindgen = "0.2.63"
+web-sys = {version = "0.3.61", features = ["console"]}
 
 [target.'cfg(unix)'.dependencies]
 alsa = {version = "0.6.0"}
