--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -21,3 +21,6 @@ smallvec = {version = "1.9", features = ["serde"]}
 smartstring = "1.0"
 snafu = "0.7"
 sound-engine = {path = "../sound-engine"}
+
+[target.'cfg(target_arch="wasm32")'.dependencies]
+web-sys = {version = "0.3.61", features = []}
