--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -33,6 +33,11 @@ js-sys = "0.3.61"
 wasm-bindgen = "0.2.63"
 web-sys = {version = "0.3.61", features = ["console"]}
 
+[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
+debug-js-glue = true
+demangle-name-section = true
+dwarf-debug-info = true
+
 [target.'cfg(unix)'.dependencies]
 alsa = {version = "0.6.0"}
 psimple = {package = "libpulse-simple-binding", version = "2.24.1"}
