--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -18,3 +18,6 @@ serde_json = "1.0.74"
 simple-error = "0.2.3"
 snafu = "0.7.0"
 toml = "0.5"
+
+[target.'cfg(target_arch="wasm32")'.dependencies]
+web-sys = {version = "0.3.61", features = []}
