--- a/vpo-backend/.cargo/config.toml
+++ b/vpo-backend/.cargo/config.toml
@@ -1,4 +1,8 @@
 [build]
+rustflags = [
+  "-C",
+  "link-arg=--initial-memory=327680000",
+]
 target = "wasm32-unknown-unknown"
 
 [target.x86_64-unknown-linux-gnu]
