--- a/vpo-backend/.cargo/config.toml
+++ b/vpo-backend/.cargo/config.toml
@@ -1,9 +1,8 @@
-[build]
+[target.wasm32-unknown-unknown]
 rustflags = [
   "-C",
   "link-arg=--initial-memory=327680000",
 ]
-target = "wasm32-unknown-unknown"
 
 [target.x86_64-unknown-linux-gnu]
 rustflags = [
