--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 [dependencies]
 byteorder = "1.4.3"
 console_error_panic_hook = {version = "0.1.6", optional = true}
+crossbeam = "0.8.2"
 futures = "0.3.27"
 ipc = {path = "./ipc"}
 lazy_static = "1.4.0"
@@ -15,7 +16,7 @@ node-engine = {path = "./node-engine"}
 once_cell = "1.17.1"
 regex = "1.7"
 resource-manager = {path = "./resource-manager"}
-rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std"]}
+rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std", "sync"]}
 semver = "1.0.14"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
@@ -44,9 +45,9 @@ pulse = {package = "libpulse-binding", version = "2.25.0"}
 
 [target.'cfg(any(unix,windows))'.dependencies]
 async-std = "1.10.0"
-cpal = "0.14.0"
+cpal = "0.15.0"
 midir = "0.8"
-ringbuf = "0.2.8"
+rtrb = "0.2.3"
 symphonia = "0.5.2"
 
 [profile.release]
