--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -29,8 +29,9 @@ walkdir = "2"
 [lib]
 crate-type = ["cdylib", "lib"]
 
-[target.'cfg(target_arch="wasm32")'.dependencies]
+[target.'cfg(not(wasm32))'.dependencies]
 js-sys = "0.3.61"
+threadpool = "1.8.1"
 wasm-bindgen = "0.2.63"
 web-sys = {version = "0.3.61", features = ["console"]}
 
@@ -48,7 +49,7 @@ async-std = "1.10.0"
 cpal = "0.15.0"
 midir = "0.8"
 rtrb = "0.2.3"
-symphonia = "0.5.2"
+symphonia = {version = "0.5.2", features = ["all"]}
 
 [profile.release]
 lto = true
