--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0.74"
 smallvec = {version = "1.10", features = ["serde"]}
 snafu = "0.7"
 sound-engine = {path = "./sound-engine"}
+tokio = "1.28.0"
 toml = "0.5"
 walkdir = "2"
 
