--- a/vpo-backend/ipc/Cargo.toml
+++ b/vpo-backend/ipc/Cargo.toml
@@ -7,10 +7,10 @@ version = "0.1.0"
 
 [dependencies]
 bitflags = "1.3.2"
+futures = "0.3.28"
+log = "0.4.17"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
-
-[target.'cfg(any(unix,windows))'.dependencies]
-async-std = "1.10.0"
-futures = "0.3"
-thiserror = "1.0.30"
+snafu = "0.7.0"
+tokio = {version = "1", features = ["full"]}
+tokio-tungstenite = "0.18.0"
