--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -7,17 +7,13 @@ version = "0.1.0"
 
 [dependencies]
 byteorder = "1.4.3"
-console_error_panic_hook = {version = "0.1.6", optional = true}
-crossbeam = "0.8.2"
 futures = "0.3.27"
-hound = "3.5.0"
 ipc = {path = "./ipc"}
 lazy_static = "1.4.0"
 node-engine = {path = "./node-engine"}
 once_cell = "1.17.1"
 regex = "1.7"
 resource-manager = {path = "./resource-manager"}
-rfd = "0.11.3"
 rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std", "sync"]}
 semver = "1.0.14"
 serde = {version = "1.0.133", features = ["derive"]}
@@ -26,16 +22,14 @@ serde_with = "3.0.0"
 smallvec = {version = "1.10", features = ["serde"]}
 snafu = "0.7"
 sound-engine = {path = "./sound-engine"}
-tokio = "1.28.0"
 toml_edit = {version = "0.19.8", features = ["serde"]}
-walkdir = "2"
 
 [lib]
 crate-type = ["cdylib", "lib"]
 
-[target.'cfg(not(wasm32))'.dependencies]
+[target.'cfg(target_arch="wasm32")'.dependencies]
+console_error_panic_hook = {version = "0.1.6"}
 js-sys = "0.3.61"
-threadpool = "1.8.1"
 wasm-bindgen = "0.2.63"
 web-sys = {version = "0.3.61", features = ["console"]}
 
@@ -43,16 +37,16 @@ web-sys = {version = "0.3.61", features = ["console"]}
 debug-js-glue = true
 demangle-name-section = true
 
-[target.'cfg(unix)'.dependencies]
-alsa = {version = "0.6.0"}
-psimple = {package = "libpulse-simple-binding", version = "2.24.1"}
-pulse = {package = "libpulse-binding", version = "2.25.0"}
-
 [target.'cfg(any(unix,windows))'.dependencies]
 cpal = "0.15.0"
+hound = "3.5.0"
 midir = "0.8"
+rfd = "0.11.3"
 rtrb = "0.2.3"
 symphonia = {version = "0.5.2", features = ["all"]}
+threadpool = "1.8.1"
+tokio = "1.28.0"
+walkdir = "2"
 
 [profile.release]
 lto = true
