--- a/vpo-backend/ipc/Cargo.toml
+++ b/vpo-backend/ipc/Cargo.toml
@@ -12,5 +12,7 @@ log = "0.4.17"
 serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
 snafu = "0.7.0"
+
+[target.'cfg(any(unix,windows))'.dependencies]
 tokio = {version = "1", features = ["full"]}
 tokio-tungstenite = "0.18.0"
