--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -17,6 +17,7 @@ serde = {version = "1.0.133", features = ["derive"]}
 serde_json = "1.0.74"
 serde_with = "3.0.0"
 simple-error = "0.2.3"
+smallvec = "1.10.0"
 snafu = "0.7.0"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
