--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -11,6 +11,8 @@ futures = "0.3.27"
 ipc = {path = "./ipc"}
 lazy_static = "1.4.0"
 node-engine = {path = "./node-engine"}
+notify = "5.1.0"
+notify-debouncer-mini = "0.2.1"
 once_cell = "1.17.1"
 regex = "1.7"
 resource-manager = {path = "./resource-manager"}
