--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -8,32 +8,37 @@ version = "0.1.0"
 [dependencies]
 byteorder = "1.4.3"
 futures = "0.3.27"
-ipc = {path = "./ipc"}
+ipc = { path = "./ipc" }
 lazy_static = "1.4.0"
-node-engine = {path = "./node-engine"}
+node-engine = { path = "./node-engine" }
 notify = "5.1.0"
 notify-debouncer-mini = "0.2.1"
 once_cell = "1.17.1"
 regex = "1.7"
-resource-manager = {path = "./resource-manager"}
-rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std", "sync"]}
+resource-manager = { path = "./resource-manager" }
+rhai = { version = "1.7.0", default-features = false, features = [
+  "f32_float",
+  "only_i32",
+  "std",
+  "sync",
+] }
 semver = "1.0.14"
-serde = {version = "1.0.133", features = ["derive"]}
+serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 serde_with = "3.0.0"
-smallvec = {version = "1.10", features = ["serde"]}
+smallvec = { version = "1.10", features = ["serde"] }
 snafu = "0.7"
-sound-engine = {path = "./sound-engine"}
-toml_edit = {version = "0.19.8", features = ["serde"]}
+sound-engine = { path = "./sound-engine" }
+toml_edit = { version = "0.19.8", features = ["serde"] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-console_error_panic_hook = {version = "0.1.6"}
+console_error_panic_hook = { version = "0.1.6" }
 js-sys = "0.3.61"
 wasm-bindgen = "0.2.63"
-web-sys = {version = "0.3.61", features = ["console"]}
+web-sys = { version = "0.3.61", features = ["console"] }
 
 [package.metadata.wasm-pack.profile.dev.wasm-bindgen]
 debug-js-glue = true
@@ -42,13 +47,16 @@ demangle-name-section = true
 [target.'cfg(any(unix,windows))'.dependencies]
 cpal = "0.15.0"
 hound = "3.5.0"
+hyper = { version = "0.14.26", features = ["full"] }
 midir = "0.8"
 rfd = "0.11.3"
 rtrb = "0.2.3"
-symphonia = {version = "0.5.2", features = ["all"]}
+symphonia = { version = "0.5.2", features = ["all"] }
 threadpool = "1.8.1"
 tokio = "1.28.0"
 walkdir = "2"
+tower = { version = "0.4", features = ["full"] }
+tower-http = { version = "0.4", features = ["fs"] }
 
 [profile.release]
 lto = true
@@ -72,9 +80,4 @@ inherits = "dev"
 opt-level = 3
 
 [workspace]
-members = [
-  "sound-engine",
-  "node-engine",
-  "ipc",
-  "resource-manager",
-]
+members = ["sound-engine", "node-engine", "ipc", "resource-manager"]
