--- a/vpo-frontend/package.json
+++ b/vpo-frontend/package.json
@@ -30,6 +30,7 @@
 		"jsdom": "^21.1.1",
 		"panzoom": "^9.4.3",
 		"rxjs": "^7.8.0",
-		"svelte-i18next": "^1.2.2"
+		"svelte-i18next": "^1.2.2",
+		"toml": "^3.0.0"
 	}
 }
