--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -7,20 +7,28 @@ version = "0.1.0"
 
 [dependencies]
 arr_macro = "0.2.1"
-ddgg = {git = "https://github.com/smj-edison/ddgg", features = ["js_names", "serde"]}
+ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
+    "js_names",
+    "serde",
+    "serde_string_indexes",
+] }
 enum_dispatch = "0.3.8"
 itertools = "0.10.5"
 lazy_static = "1.4.0"
 petgraph = "0.6.0"
-resource-manager = {path = "../resource-manager"}
-rhai = {version = "1.7.0", default-features = false, features = ["f32_float", "only_i32", "std"]}
-serde = {version = "1.0.133", features = ["derive"]}
+resource-manager = { path = "../resource-manager" }
+rhai = { version = "1.7.0", default-features = false, features = [
+    "f32_float",
+    "only_i32",
+    "std",
+] }
+serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
-smallvec = {version = "1.9", features = ["serde"]}
+smallvec = { version = "1.9", features = ["serde"] }
 smartstring = "1.0"
 snafu = "0.7"
-sound-engine = {path = "../sound-engine"}
+sound-engine = { path = "../sound-engine" }
 wasm-bindgen = "0.2.84"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-web-sys = {version = "0.3.61", features = []}
+web-sys = { version = "0.3.61", features = [] }
