--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -13,6 +13,7 @@ ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
     "serde_string_indexes",
 ] }
 enum_dispatch = "0.3.8"
+ghost-cell = "0.2.3"
 itertools = "0.10.5"
 lazy_static = "1.4.0"
 petgraph = "0.6.0"
