--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -6,7 +6,6 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bumpalo = { version = "3.14.0", features = ["collections"] }
 arr_macro = "0.2.1"
 ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
     "js_names",
@@ -32,6 +31,7 @@ snafu = "0.7"
 sound-engine = { path = "../sound-engine" }
 common = { path = "../common" }
 wasm-bindgen = "0.2.84"
+buddy-system = "0.1.0"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
