--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -31,6 +31,7 @@ snafu = "0.7"
 sound-engine = { path = "../sound-engine" }
 common = { path = "../common" }
 wasm-bindgen = "0.2.84"
+clocked = "0.1.0"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
