--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -32,6 +32,8 @@ sound-engine = { path = "../sound-engine" }
 common = { path = "../common" }
 wasm-bindgen = "0.2.84"
 clocked = "0.1.0"
+self_cell = "1.0.1"
+generational-arena = "0.2.9"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
