--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -34,6 +34,7 @@ wasm-bindgen = "0.2.84"
 clocked = "0.1.0"
 self_cell = "1.0.1"
 generational-arena = "0.2.9"
+recycle_vec = "1.0.4"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
