--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -32,6 +32,7 @@ sound-engine = { path = "./sound-engine" }
 toml_edit = { version = "0.19.8", features = ["serde"] }
 petgraph = { version = "0.6.0", features = ["serde-1"] }
 bumpalo = "3.14.0"
+clocked = "0.1.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
