--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -31,6 +31,8 @@ snafu = "0.7"
 sound-engine = { path = "./sound-engine" }
 toml_edit = { version = "0.19.8", features = ["serde"] }
 petgraph = { version = "0.6.0", features = ["serde-1"] }
+bumpalo = "3.14.0"
+clocked = "0.1.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
@@ -81,4 +83,4 @@ inherits = "dev"
 opt-level = 3
 
 [workspace]
-members = ["sound-engine", "node-engine", "ipc", "resource-manager"]
+members = ["sound-engine", "node-engine", "ipc", "resource-manager", "common"]
