--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clocked = "0.4.0"
+clocked = { path = "../../../clocked" }
 common = { path = "../common" }
 lazy_static = "1.4.0"
 nalgebra = "0.31"
