--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -30,7 +30,7 @@ snafu = "0.7"
 sound-engine = { path = "./sound-engine" }
 toml_edit = { version = "0.19.8", features = ["serde"] }
 petgraph = { version = "0.6.0", features = ["serde-1"] }
-clocked = { path = "../../clocked" }
+clocked = "0.6.0"
 rayon = "1.8.0"
 flume = "0.11.0"
 generational-arena = "0.2.9"
@@ -61,7 +61,7 @@ walkdir = "2"
 
 
 [profile.release]
-lto = true
+lto = "thin"
 opt-level = 3
 
 [profile.dev]
