Hash map optimization

--- a/vpo-backend/common/Cargo.toml
+++ b/vpo-backend/common/Cargo.toml
@@ -13,4 +13,5 @@ ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
     "serde",
     "serde_string_indexes",
 ] }
+seahash = "4.1.0"
 serde = { version = "1.0.133", features = ["derive"] }
