--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -36,6 +36,7 @@ flume = "0.11.0"
 generational-arena = "0.2.9"
 rubato = "0.14.1"
 thread-priority = "0.15.1"
+seahash = "4.1.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
