--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -32,6 +32,7 @@ self_cell = "1.0.1"
 generational-arena = "0.2.9"
 recycle_vec = "1.0.4"
 clocked = "0.6.0"
+seahash = "4.1.0"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
