--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 smallvec = "1.10.0"
 snafu = "0.7.0"
+strum = { version = "0.26.1", features = ["derive"] }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
