--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -44,6 +44,7 @@ ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
   "serde",
   "serde_string_indexes",
 ] }
+path-slash = "0.2.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
@@ -69,7 +70,6 @@ walkdir = "2"
 
 
 [profile.release]
-lto = "thin"
 opt-level = 3
 
 [profile.dev]
